--- a/Challenge04LGBB/View/Base.lproj/ListRecipesScreen.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/ListRecipesScreen.storyboard
@@ -116,7 +116,7 @@
                                                                                 <constraint firstAttribute="height" constant="16" id="Rfw-Vo-ZfN"/>
                                                                             </constraints>
                                                                         </imageView>
-                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="easy-16px" translatesAutoresizingMaskIntoConstraints="NO" id="I2l-CW-keP">
+                                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="easy-16px" translatesAutoresizingMaskIntoConstraints="NO" id="I2l-CW-keP" userLabel="Difficulty">
                                                                             <rect key="frame" x="193.5" y="71" width="16" height="16"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="height" constant="16" id="3bR-Yo-kys"/>
@@ -153,7 +153,7 @@
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pc1-d5-Zvm">
-                                                                            <rect key="frame" x="219.5" y="72" width="29.5" height="14"/>
+                                                                            <rect key="frame" x="221" y="72" width="29.5" height="14"/>
                                                                             <fontDescription key="fontDescription" name="Baloo2-Medium" family="Baloo 2" pointSize="12"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
@@ -166,7 +166,7 @@
                                                                         <constraint firstItem="Pc1-d5-Zvm" firstAttribute="centerY" secondItem="I2l-CW-keP" secondAttribute="centerY" id="8M0-Oq-uOx"/>
                                                                         <constraint firstItem="I2l-CW-keP" firstAttribute="leading" secondItem="nI6-0I-Opg" secondAttribute="trailing" constant="10" id="9C5-AZ-f9p"/>
                                                                         <constraint firstItem="mTg-16-XOF" firstAttribute="leading" secondItem="e7L-Ap-qC7" secondAttribute="trailing" constant="20" id="E5o-ex-LWY"/>
-                                                                        <constraint firstItem="Pc1-d5-Zvm" firstAttribute="leading" secondItem="I2l-CW-keP" secondAttribute="trailing" constant="10" id="MT1-GN-enu"/>
+                                                                        <constraint firstItem="Pc1-d5-Zvm" firstAttribute="leading" secondItem="I2l-CW-keP" secondAttribute="trailing" constant="11.5" id="MT1-GN-enu"/>
                                                                         <constraint firstItem="98H-Ic-Nyh" firstAttribute="centerY" secondItem="I2l-CW-keP" secondAttribute="centerY" id="QIW-5x-m5x"/>
                                                                         <constraint firstItem="mTg-16-XOF" firstAttribute="top" secondItem="tSv-BZ-xJR" secondAttribute="bottom" constant="10" id="RSx-cv-Jc8"/>
                                                                         <constraint firstItem="e7L-Ap-qC7" firstAttribute="top" secondItem="zCo-KL-o0Y" secondAttribute="top" constant="16" id="SS0-QB-EJI"/>
@@ -181,7 +181,7 @@
                                                                         <constraint firstItem="I2l-CW-keP" firstAttribute="centerY" secondItem="mTg-16-XOF" secondAttribute="centerY" id="mdt-UB-2n9"/>
                                                                         <constraint firstItem="tSv-BZ-xJR" firstAttribute="top" secondItem="jlA-Ri-iju" secondAttribute="bottom" id="nes-R4-Yo5"/>
                                                                         <constraint firstItem="jlA-Ri-iju" firstAttribute="top" secondItem="zCo-KL-o0Y" secondAttribute="top" constant="30" id="rU5-Kl-5hA"/>
-                                                                        <constraint firstItem="98H-Ic-Nyh" firstAttribute="leading" secondItem="Pc1-d5-Zvm" secondAttribute="trailing" constant="10" id="xTI-YA-DFq"/>
+                                                                        <constraint firstItem="98H-Ic-Nyh" firstAttribute="leading" secondItem="Pc1-d5-Zvm" secondAttribute="trailing" constant="8.5" id="xTI-YA-DFq"/>
                                                                         <constraint firstAttribute="width" constant="374" id="zpK-7I-B12"/>
                                                                     </constraints>
                                                                     <userDefinedRuntimeAttributes>
@@ -206,6 +206,7 @@
                                                         <connections>
                                                             <outlet property="AgeTableView" destination="hpc-SG-AQf" id="LvS-zK-bAA"/>
                                                             <outlet property="ImageTabbleView" destination="e7L-Ap-qC7" id="qjU-PH-XHB"/>
+                                                            <outlet property="dificultyImageView" destination="I2l-CW-keP" id="62v-GU-iin"/>
                                                             <outlet property="dificultyTableView" destination="Pc1-d5-Zvm" id="r5b-ho-a3M"/>
                                                             <outlet property="nameTableView" destination="jlA-Ri-iju" id="3vE-9u-yGB"/>
                                                             <outlet property="timeTableView" destination="nI6-0I-Opg" id="Us4-uy-vuR"/>
@@ -428,6 +429,7 @@
                         <outlet property="TimeCard" destination="c76-mQ-LoN" id="8Fa-xE-9md"/>
                         <outlet property="confete" destination="My5-cT-MKU" id="bZR-Y1-CTw"/>
                         <outlet property="difficultyCard" destination="fm9-CO-36o" id="Ie9-vA-sOd"/>
+                        <outlet property="difficultyCardImage" destination="K3f-QE-khs" id="hbW-7z-DpK"/>
                         <outlet property="tableViewReceitasRapidasHeight" destination="dCo-xV-Hmy" id="FH5-2n-02i"/>
                         <outlet property="tablleViewReceitasRapidas" destination="F1W-3H-fB2" id="yMZ-vV-GQP"/>
                     </connections>
