--- a/Challenge04LGBB/View/Base.lproj/OnBoard.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/OnBoard.storyboard
@@ -25,7 +25,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zm7-fv-9vI">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zm7-fv-9vI">
                                 <rect key="frame" x="20" y="671" width="77" height="52"/>
                                 <color key="backgroundColor" name="Child_Orange"/>
                                 <constraints>
@@ -44,7 +44,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Encontre sua receita" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n0M-L3-5bz">
-                                <rect key="frame" x="20" y="109" width="353" height="50"/>
+                                <rect key="frame" x="20" y="109" width="350" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="fWB-ON-p4q"/>
                                 </constraints>
@@ -53,16 +53,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ob.1" translatesAutoresizingMaskIntoConstraints="NO" id="SjF-oY-RED">
-                                <rect key="frame" x="20" y="193.99999999999997" width="353" height="353.33333333333326"/>
+                                <rect key="frame" x="20" y="193.99999999999997" width="350" height="353.33333333333326"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Você encontra a receita mais apropriada para fazer pela duração, nível e faixa etária infantil!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="vHU-it-w2l">
-                                <rect key="frame" x="20" y="567.33333333333337" width="353" height="55.666666666666629"/>
+                                <rect key="frame" x="20" y="567.33333333333337" width="350" height="55.666666666666629"/>
                                 <fontDescription key="fontDescription" name="Baloo2-SemiBold" family="Baloo 2" pointSize="32"/>
                                 <color key="textColor" name="Mealmories_Gray"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uJa-y1-qj5">
-                                <rect key="frame" x="318" y="671" width="55" height="52"/>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uJa-y1-qj5">
+                                <rect key="frame" x="315" y="671" width="55" height="52"/>
                                 <color key="backgroundColor" name="Child_Orange"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="55" id="dqs-zO-L9g"/>
@@ -128,7 +128,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cozinhe e se divirta" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R58-Ko-UWX">
-                                <rect key="frame" x="20" y="109" width="353" height="50"/>
+                                <rect key="frame" x="20" y="109" width="350" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="2ox-fO-W89"/>
                                 </constraints>
@@ -137,15 +137,15 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ob.2" translatesAutoresizingMaskIntoConstraints="NO" id="vuA-ep-puT">
-                                <rect key="frame" x="20" y="193.99999999999997" width="353" height="353.33333333333326"/>
+                                <rect key="frame" x="20" y="193.99999999999997" width="350" height="353.33333333333326"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estimule cooperação na cozinha por meio de turnos e instruções." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="cKc-AG-6bd">
-                                <rect key="frame" x="20" y="567.33333333333337" width="353" height="55.333333333333371"/>
+                                <rect key="frame" x="20" y="567.33333333333337" width="350" height="55.333333333333371"/>
                                 <fontDescription key="fontDescription" name="Baloo2-SemiBold" family="Baloo 2" pointSize="32"/>
                                 <color key="textColor" name="Mealmories_Gray"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XkB-W7-dVI">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XkB-W7-dVI">
                                 <rect key="frame" x="20" y="670.66666666666663" width="77" height="52"/>
                                 <color key="backgroundColor" name="Mix_Magenta"/>
                                 <constraints>
@@ -163,8 +163,8 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5zI-VN-YCF">
-                                <rect key="frame" x="318" y="670.66666666666663" width="55" height="52"/>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5zI-VN-YCF">
+                                <rect key="frame" x="315" y="670.66666666666663" width="55" height="52"/>
                                 <color key="backgroundColor" name="Mix_Magenta"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="knA-La-Vbu"/>
